Add seo instruments

--- a/Sites/karakat/index.html
+++ b/Sites/karakat/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SPK7RD3KB4"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SPK7RD3KB4');
+    </script>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    
+        ym(89338530, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true
+        });
+    </script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +38,20 @@
     <link rel="stylesheet" href="css/media410.css">
     <link rel="stylesheet" href="css/media310.css">
     <link rel="stylesheet" href="css/gallery_popup.css">
+    <link rel="icon" href="http://kara-kat.ru/favicon.svg" type="image/svg">
+    <link rel="canonical" href="http://kara-kat.ru"/>
     <script src="./js/script.js"></script>
-    <title>КАРАКАТ</title>
+    <meta name="keywords" content="Каракат, Каракаты, Вологда, купить, Каракаты в Вологде, Каракаты в Вологде купить, Каракаты онлайн, Собрать свой каракат, Премиум каракаты, Недорогие каракаты, Премиум каракаты, Недорогие каракаты купить, Каракаты купить недорого"> 
+    <meta name="description" content="Заказать каракат в Вологде ПРОСТО! В наличии три доступные модификации от эконом до премиум класса. Помимо этого предоставляется уникальная возможность собрать каракат по собственным предпочтениям, мы учтем все Ваши пожелания! Залетай к нам!"/>
+    <title>Каракаты в Вологде</title>
 </head>
 <body>
+    <noscript>
+        <div>
+            <img src="https://mc.yandex.ru/watch/89338530" style="position:absolute; left:-9999px;" alt=""/>
+        </div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
     <div id="popup" class="popup">
@@ -265,12 +298,12 @@
                     </tr>
                 </table>
                 <div class="characteristics_content_foto">
-                    <img src="./image/Background.png" alt="Изображение караката средней комплектации">
+                    <img src="./image/Background.png" alt="Изображение караката средней комплектации" title="Изображение караката средней комплектации">
                 </div>
             </div>
             <div class="section_characteristics_content">
                 <div class="characteristics_content_foto2">
-                    <img src="./image/Background2.png" alt="Изображение караката наивысшей комплектации">
+                    <img src="./image/Background2.png" alt="Изображение караката наивысшей комплектации" title="Изображение караката наивысшей комплектации">
                 </div>
                 <table class="section_characteristics_table">
                     <tr>
@@ -385,7 +418,7 @@
                 <ul class="section_advantage_list">
                     <li class="section_advantage_item">
                         <div class="section_advantage_item_image">
-                            <img src="./image/cogs.svg" alt="Cogs">
+                            <img src="./image/cogs.svg" alt="Cogs" title="Cogs">
                         </div>
                         <div class="section_advantage_item_text">
                             <span> Продукция от производителя</span>
@@ -393,7 +426,7 @@
                     </li>
                     <li class="section_advantage_item">
                         <div class="section_advantage_item_image">
-                            <img src="./image/clover.svg" alt="Cogs">
+                            <img src="./image/clover.svg" alt="Clover" title="Clover">
                         </div>
                         <div class="section_advantage_item_text">
                             <span> Надежность комплектующих</span>
@@ -401,7 +434,7 @@
                     </li>
                     <li class="section_advantage_item">
                         <div class="section_advantage_item_image">
-                            <img src="./image/book.svg" alt="Cogs">
+                            <img src="./image/book.svg" alt="Book" title="Book">
                         </div>
                         <div class="section_advantage_item_text">
                             <span> Простота использования</span>
@@ -409,7 +442,7 @@
                     </li>
                     <li class="section_advantage_item">
                         <div class="section_advantage_item_image">
-                            <img src="./image/robot.svg" alt="Cogs">
+                            <img src="./image/robot.svg" alt="Robot" title="Robot">
                         </div>
                         <div class="section_advantage_item_text">
                             <span> Легкозаменяемые узлы агрегаты</span>
@@ -428,7 +461,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k11.jpg" alt="alt">
+                        <img src="./image/gallery/k11.jpg" alt="Фото караката средней комплектации" title="Фото караката средней комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -436,7 +469,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k21.jpg" alt="alt">
+                        <img src="./image/gallery/k21.jpg" alt="Фото караката средней комплектации" title="Фото караката средней комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -444,7 +477,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k31.jpg" alt="alt">
+                        <img src="./image/gallery/k31.jpg" alt="Фото караката средней комплектации" title="Фото караката средней комплектации">
                        </a>
                 </li>
                 <li class="section_gallery_item">
@@ -452,7 +485,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k41.jpg" alt="alt">
+                        <img src="./image/gallery/k41.jpg" alt="Фото караката средней комплектации" title="Фото караката средней комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -460,7 +493,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k51.jpg" alt="alt">
+                        <img src="./image/gallery/k51.jpg" alt="Фото караката средней комплектации" title="Фото караката средней комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -468,7 +501,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                    <img src="./image/gallery/k61.jpg" alt="alt">
+                    <img src="./image/gallery/k61.jpg" alt="Фото караката средней комплектации" title="Фото караката средней комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -476,7 +509,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/panel.jpg" alt="alt">
+                        <img src="./image/gallery/panel.jpg" alt="Фото панели управления караката" title="Фото панели управления караката">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -484,7 +517,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k12.jpg" alt="alt">
+                        <img src="./image/gallery/k12.jpg" alt="Фото караката премиум комплектации" title="Фото караката премиум комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -492,7 +525,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k22.jpg" alt="alt">
+                        <img src="./image/gallery/k22.jpg" alt="Фото караката премиум комплектации" title="Фото караката премиум комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -500,7 +533,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k32.jpg" alt="alt">
+                        <img src="./image/gallery/k32.jpg" alt="Фото караката премиум комплектации" title="Фото караката премиум комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -508,7 +541,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k42.jpg" alt="alt">
+                        <img src="./image/gallery/k42.jpg" alt="Фото караката премиум комплектации" title="Фото караката премиум комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -516,7 +549,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k52.jpg" alt="alt">
+                        <img src="./image/gallery/k52.jpg" alt="Фото караката премиум комплектации" title="Фото караката премиум комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -524,7 +557,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k62.jpg" alt="alt">
+                        <img src="./image/gallery/k62.jpg" alt="Фото караката премиум комплектации" title="Фото караката премиум комплектации">
                     </a>
                 </li>
                 <li class="section_gallery_item">
@@ -532,7 +565,7 @@
                         <div class="gallery_item_hover">
                             Посмотреть
                         </div>
-                        <img src="./image/gallery/k72.jpg" alt="alt">
+                        <img src="./image/gallery/k72.jpg" alt="Фото караката премиум комплектации" title="Фото караката премиум комплектации">
                     </a>
                 </li>
             </ul> 
