add image k2, change favicon http(s), hide button construct your karakat

--- a/Sites/karakat/index.html
+++ b/Sites/karakat/index.html
@@ -38,10 +38,11 @@
     <link rel="stylesheet" href="css/media410.css">
     <link rel="stylesheet" href="css/media310.css">
     <link rel="stylesheet" href="css/gallery_popup.css">
-    <link rel="icon" href="http://kara-kat.ru/favicon.svg" type="image/svg">
-    <link rel="canonical" href="http://kara-kat.ru"/>
+    <link rel="icon" href="https://kara-kat.ru/favicon.svg" type="image/svg">
+    <link rel="canonical" href="https://kara-kat.ru"/>
     <script src="./js/script.js"></script>
-    <meta name="keywords" content="Каракат, Каракаты, Вологда, купить, Каракаты в Вологде, Каракаты в Вологде купить, Каракаты онлайн, Собрать свой каракат, Премиум каракаты, Недорогие каракаты, Премиум каракаты, Недорогие каракаты купить, Каракаты купить недорого"> 
+    <meta name="keywords" content="Каракат, Каракаты, Вологда, купить, Каракаты в Вологде, Каракаты в Вологде купить, Каракаты онлайн, Собрать свой каракат, Премиум каракаты, Недорогие каракаты, Недорогие каракаты купить, Каракаты купить недорого,
+    rfhfrfn, rfhfrfns, Djkjulf, regbnm, Rfhfrfns d Djkjult, Rfhfrfns d Djkjult regbnm, Rfhfrfns jykfqy, Cj,hfnm cdjq rfhfrfn, Ghtvbev rfhfrfns, Ytljhjubt rfhfrfns, Ytljhjubt rfhfrfns regbnm, Rfhfrfns regbnm ytljhjuj"> 
     <meta name="description" content="Заказать каракат в Вологде ПРОСТО! В наличии три доступные модификации от эконом до премиум класса. Помимо этого предоставляется уникальная возможность собрать каракат по собственным предпочтениям, мы учтем все Ваши пожелания! Залетай к нам!"/>
     <title>Каракаты в Вологде</title>
 </head>
@@ -211,10 +212,9 @@
                     </div>
                 </nav>
             </div>
-            <a href="#popup" class="construction_trigger">
+            <!-- <a href="#popup" class="construction_trigger">
                 СОБЕРИ СВОЙ КАРАКАТ!
-            </a>
-        
+            </a> -->
         </div>
     </header>
     <main>
